# TSMD

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
assets/tsExample/: todo.txt
data/: README.md
data/Synthetic/: README.md  synthetic_signal.py
docs/: conf.py  index.rst  requirements.txt
docs/algorithms/: Taxonomy.md  index.md
docs/datasets/: JIGSAW.md  MITDB.md  MITDB1.md  PTT-PPG.md  REFIT.md  SIGN.md  SyntheticGenerator.md  armCODA.md  index.md
docs/evaluation/: RQ1.md  RQ2.md  RQ3.md  RQ4.md  RQ5.md  RQ6.md  index.md
docs/guidelines/: index.md
docs/overview/: Challenges.md  Introduction.md  Motif-Discovery.md  MotifDiscovery.md  index.md
experiments/: README.md  benchmark_experiment.py
experiments/real_data_experiments/: grammarviz.ipynb  latentmotif.ipynb  locomotif.ipynb  matrix_profile.ipynb  mdl.ipynb  motiflets.ipynb  panmatrixprofile.ipynb  pepa.ipynb  pepa_adaptative.ipynb  run_motiflets.py  setfinder.ipynb  valmod.ipynb
experiments/synthetic_experiments/: RQ2_scalability.ipynb  RQ3_several_motifs.ipynb  RQ4_motifs_cardinality.ipynb  RQ5_multiscale.ipynb  RQ6_temporal_deformations.ipynb  RQ7_spatial_deformations.ipynb  RQ8_noise_sensitivity.ipynb  fixed_motifs_var_length.ipynb  synthetic_deformations.ipynb  synthetic_variable_cardinality.ipynb  synthetic_variable_size.ipynb
results/: README.md  results_utils.py
tsmd/: README.md
tsmd/competitors/: adaptative_persistence.py  grammarviz.py  latentmotifs.py  locomotif.py  matrixprofile.py  mdl.py  motiflets.py  panmatrixprofile.py  valmod.py  (+2 more)
(+379 files in other folders)
